namespace ThanhDV.SaveKeeper.Core
{
    /// <summary>
    /// A marker interface used to indicate that a class or struct represents storable data.
    /// Any class containing game state (e.g., health, gold, position) must implement this interface.
    /// </summary>
    public interface ISaveData
    {
    }
}