---
config:
  theme: dark
id: arch-overview-01
title: SaveKeeper Architecture Overview
---
classDiagram
    direction TB

    %% High-level layered view: contracts, core orchestration, and service abstractions.
    %% Implementation details are in 04-Serialization-Storage. Async handles are in 03-Operation-Handles.

    namespace Contracts {
        class ISavable {
            <<interface>>
            +string SaveKey
            +CaptureData() ISaveData
            +RestoreData(ISaveData data) void
        }

        class ISaveData {
            <<interface>>
        }

        class ISaveMeta {
            <<interface>>
            +string ProfileID
            +DateTime LastTimeSaved
        }
    }

    namespace ServiceAbstractions {
        class ISerializer {
            <<interface>>
            +Serialize~T~(T) string
            +Deserialize~T~(string) T
        }

        class IStorageProvider {
            <<interface>>
            +WriteAsync(...) Task
            +ReadAsync(...) Task~string~
            +Exists(...) bool
            +GetLastWriteTimeUtc(...) DateTime?
            +DeleteProfile(...) void
            +GetAllProfileIds() IEnumerable~string~
        }

        class IEncryptionProvider {
            <<interface>>
            +Encrypt(string) string
            +Decrypt(string) string
        }
    }

    namespace Core {
        class SaveSettings {
            <<ScriptableObject>>
            +bool UseEncryption
            +bool EnableAutoSave
            +bool AutoSaveOnQuit
            +string FileName
        }

        class SaveData {
            +ISaveMeta Meta
            +Dictionary~string, ISaveData~ ObjectData
            +Dictionary~string, string~ SimpleData
            +Clone() SaveData
        }

        class SaveRegistry {
            +IReadOnlyList~ISavable~ Savables
            +Register(ISavable) void
            +Unregister(ISavable) void
        }

        class SaveKeeper {
            +SaveAsync(...) Handle
            +LoadAsync(...) Handle
            +GetAllMetadataAsync~T~() Handle
            +DeleteProfile(...) void
        }

        class DefaultSaveMeta {
            +string ProfileID
            +DateTime LastTimeSaved
        }
    }

    %% Core wiring (omit operation handles + infrastructure detail).
    SaveKeeper --> SaveData : owns active state
    SaveKeeper --> SaveRegistry : observes
    SaveKeeper ..> SaveSettings : reads
    SaveKeeper ..> ISerializer : uses
    SaveKeeper ..> IStorageProvider : uses
    SaveKeeper ..> IEncryptionProvider : uses

    %% Data containment.
    SaveRegistry "1" *-- "*" ISavable : tracks
    SaveData o-- ISaveData : per-savable data
    SaveData o-- ISaveMeta : embedded meta header
    ISavable ..> ISaveData : capture / restore

    %% Default meta implementation (used when caller passes null metadata to SaveAsync).
    DefaultSaveMeta ..|> ISaveMeta : implements
